--- a/FilmesAPI/appsettings.json
+++ b/FilmesAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FilmeConnection": "Server=(localdb)\\instanceapirest;Integrated Security=true;Initial Catalog=FilmesDB;"
+  }
 }
