adicionado nova entidade cinema

--- a/FilmesAPI/appsettings.json
+++ b/FilmesAPI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FilmeConnection": "Server=(localdb)\\instanceapirest;Integrated Security=true;Initial Catalog=FilmesDB;"
+    "CinemaConnection": "server=localhost;database=cinemadb;user=root;password=root"
   }
 }
